# maboroshi

./: CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml  install.sh
.github/: AI_CONTRIBUTORS.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
src/: app.rs  audio.rs  config.rs  main.rs  player.rs  ui.rs
src/net/: mod.rs  mpv.rs  ytdlp.rs
src/player/: mod.rs  playlist.rs  volume.rs
src/ui/: mod.rs  theme.rs  widgets.rs
