[package]
name = "maboroshi"
version = "0.1.0"
edition = "2021"
authors = ["Kayne <w.zengkai@gmail.com>"]
description = "A lightweight terminal-based music player powered by YouTube"
license = "MIT"
repository = "https://github.com/KayneWang/maboroshi"
keywords = ["music", "player", "tui", "youtube", "terminal"]
categories = ["command-line-utilities", "multimedia"]
readme = "README.md"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
tokio = { version = "1.36", features = ["full"] }
rodio = "0.17.3"
anyhow = "1.0"
color-eyre = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }